# irnas-east-software

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  README.md  committed.toml  makefile  patch  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py  tox.ini  typos.toml  work.md
.github/: pr-labeler.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  requirement.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yaml  create-release.yaml  draft-new-release.yaml  label_pr.yaml  pre-commit.yaml  publish-new-release.yaml  publish-release.yaml
docs/: configuration.md  configuration_old.md  development_guide.md  environmental_variables.md  getting_started.md  how_east_works.md  installation.md  pack.md
scripts/: Dockerfile  Dockerfile_after_sys_setup  docker_build  docker_prep  docker_run  requirements-dev.txt  requirements.txt
src/east/: __main__.py  configuration-schema.yaml  constants.py  east_context.py  east_yml.py  helper_functions.py  sys_setup.py  temp.py
src/east/modules/: artifact.py  artifacts2pack.py  batchfile.py  nrfutil_scripts.py  pack_nrfutil.py  parsedtag.py  tsuite.py  zephyr_semver.py
src/east/modules/templates/: README.md  nrfutil_setup.bat  nrfutil_setup.sh
src/east/system_commands/: __init__.py  basic_west_commands.py  install.py  jlink_commands.py  sys_setup.py  tooling.py  util_commands.py
src/east/workspace_commands/: __init__.py  basic_commands.py  build_type_flag.py  codechecker_commands.py  codechecker_helpers.py  cortex_commands.py  pack_commands.py  release.py  release_commands.py  update_commands.py  version_commands.py
tests/: conftest.py  helpers.py  test_artifact.py  test_artifact2pack.py  test_build_type.py  test_clean.py  test_configuration.py  test_helpers.py  test_pack.py  test_parsedtag.py  test_release.py  test_tsuite.py  test_version.py
