[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "east-tool"
description="Tool built on top of West for managing nRF Connect SDK projects."
readme = "README.md"
dynamic = ["version", "dependencies", "optional-dependencies"]
authors = [{ name = "Marko Sagadin", email = "marko.sagadin42@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/IRNAS/irnas-east-software"

[project.scripts]
east = "east.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["scripts/requirements.txt"]}
optional-dependencies.dev = {file = ["scripts/requirements-dev.txt"]}

[tool.setuptools_scm]
version_scheme = "post-release"
# Can be empty, just having section will enable scm

[tool.setuptools.packages.find]
where = ["src"]
